src/objects/AE_Report__c.object
<CustomObject>
    <fields>
        <fullName>All_Patients__c</fullName>
        <defaultValue>false</defaultValue>
        <label>All Patients</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>AE Report</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>AE Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AE Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>